# raftoral

./: .gitignore  Cargo.toml  README.md  build-wasm.sh  build.rs
.cargo/: config.toml
docs/: BOOTSTRAP_ISSUE.md  COMPARISON.md  FEATURE_PLAN.md  GRPC_SERVER_USAGE.md  GRPC_TRANSPORT.md  NON_TRIVIAL_BOOTSTRAP.md  OUT_OF_BAND_SNAPSHOTTING.md  QUICKSTART.md  RAFTORAL_AS_SIDECAR.md  SCALABILITY_ARCHITECTURE.md  SMALL_MANAGEMENT_QUORUM.md  V2_ARCHITECTURE.md
examples/: checkpoint_macro_demo.rs  grpc_workflow_client.rs  ping_pong_app.rs  precise_sync_demo.rs  replicated_macro_demo.rs  role_change_demo.rs  scoped_workflow.rs  sidecar_demo.rs  simple_runtime.rs  simple_workflow.rs  two_node_sidecar.rs  typed_workflow_example.rs
proto/: raft.proto  raftoral.proto  sidecar.proto
raftoral-client/: Cargo.toml  build.rs
raftoral-client/src/: client.rs  context.rs  error.rs  lib.rs
raftoral-macros/: Cargo.toml
raftoral-macros/src/: lib.rs
scripts/: README.md  run_ping_pong.sh  run_ping_pong_http.sh  test_resume.sh  test_two_node_cluster.sh
src/: config.rs  lib.rs  main.rs  runtime.rs  workflow_proxy_runtime.rs
src/full_node/: mod.rs  workflow_service.rs
src/grpc/: bootstrap.rs  client.rs  cluster_router.rs  forwarding.rs  mod.rs  server.rs
src/grpc2/: bootstrap.rs  client.rs  mod.rs  server.rs
src/http/: bootstrap.rs  client.rs  messages.rs  mod.rs  server.rs  transport.rs  wasm_client.rs
src/kv/: mod.rs  runtime.rs
src/management/: cluster_manager.rs  config.rs  event.rs  mod.rs  runtime.rs  state_machine.rs  sub_cluster_runtime.rs
src/nodemanager/: management_command.rs  management_executor.rs  mod.rs  node_manager.rs
src/raft/: cluster.rs  command.rs  message.rs  mod.rs  node.rs
src/raft/generic/: cluster.rs  cluster_router.rs  command_executor.rs  errors.rs  event_bus.rs  grpc_transport.rs  integration_tests.rs  message.rs  mod.rs  node.rs  proposal_router.rs  rocksdb_storage.rs  storage.rs  transport.rs
src/raft/generic/server/: in_process.rs  mod.rs  network.rs
src/raft/generic2/: cluster_router.rs  integration_tests.rs  kv_runtime.rs  mod.rs  node.rs  proposal_router.rs  rocksdb_storage.rs  state_machine.rs  storage.rs  transport.rs
src/raft/generic2/server/: in_process.rs  mod.rs  network.rs
src/sidecar/: mod.rs  server.rs
src/wasm/: mod.rs
src/workflow/: commands.rs  context.rs  error.rs  execution.rs  executor.rs  mod.rs  ownership.rs  registry.rs  replicated_var.rs  runtime.rs  snapshot.rs  state_machine.rs
src/workflow2/: context.rs  event.rs  mod.rs  registry.rs  replicated_var.rs  runtime.rs  state_machine.rs
tests/: grpc_cluster_bootstrap_test.rs  grpc_test.rs  multi_node_test.rs  node_failure_test.rs  snapshot_bootstrap_test.rs  snapshot_test.rs
