[package]
name = "raftoral-client"
version = "0.1.0"
edition = "2024"
authors = ["Ori Shalev"]
license = "MIT"
description = "Client SDK for Raftoral sidecar communication"
homepage = "https://github.com/orishu/raftoral"
repository = "https://github.com/orishu/raftoral"
keywords = ["workflow", "orchestration", "raft", "client", "sidecar"]

[dependencies]
# Async runtime
tokio = { version = "^1.47", features = ["full"] }
tokio-stream = { version = "^0.1", features = ["sync"] }

# gRPC
tonic = "^0.14"
tonic-prost = "^0.14"
prost = "^0.14"
http = "^1.0"

# Serialization
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"

# Error handling
thiserror = "^2.0"

# Logging
slog = "^2.7"

# Utilities
futures = "^0.3"
async-trait = "^0.1"

[build-dependencies]
tonic-prost-build = "^0.14"

[dev-dependencies]
slog-term = "^2.9"
slog-async = "^2.8"
